--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Candal&family=Goldman:wght@400;700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+    </style>
   </head>
   <body class="mat-typography">
     <app-root></app-root>
